<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <LinearLayout 
        android:id="@+id/ll_nombre_ruta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_titulo_informacion_ruta"
        android:orientation="horizontal"
        android:paddingBottom="10dp">
        
        <TextView
        android:id="@+id/tv_titulo_nombre_ruta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_nombre"
        android:paddingRight="10dp"
        android:textColor="@color/blanco" />

    	<TextView
        android:id="@+id/tv_nombre_ruta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/blanco" />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/ll_descripcion_ruta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_nombre_ruta"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/tv_titulo_descripcion_ruta"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/titulo_descripcion_ruta"
	        android:paddingRight="10dp"
	        android:textColor="@color/blanco" />
	
	    <TextView
	        android:id="@+id/tv_descripcion_ruta"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=""
	        android:textColor="@color/blanco"
	         />
	</LinearLayout>

    <ListView
        android:id="@+id/lv_bitacora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_titulo_bitacora"
        android:textColor="@color/blanco" 
        >
    </ListView>

    <TextView
        android:id="@+id/tv_titulo_informacion_ruta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/titulo_informacion_ruta"
        android:paddingBottom="10dp"
        android:textColor="@color/blanco"
        android:textStyle="bold" />

    <TextView
        android:paddingTop="10dp"
        android:id="@+id/tv_titulo_bitacora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_descripcion_ruta"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/titulo_bitacora_ruta"
        android:textColor="@color/blanco"
        android:textStyle="bold" />

</RelativeLayout>
