<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp" >
     
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/img_buscar"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
	        android:id="@+id/tv_nombre_negocio_buscador_titulo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/titulo_nombre"
	        android:textColor="@color/blanco"
	        android:textStyle="bold" />
            
            <TextView
	        android:id="@+id/tv_nombre_negocio_buscador"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dp"
	        android:text=""
	        android:textColor="@color/blanco" />
        </LinearLayout>
	    
        <LinearLayout 
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
            android:orientation="horizontal">
		    <TextView
		        android:id="@+id/tv_direccion_negocio_buscador_titulo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/titulo_direccion"
		        android:textColor="@color/blanco"
		        android:textStyle="bold" />
		    
			    <TextView
		        android:id="@+id/tv_direccion_negocio_buscador"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="5dp"
		        android:text=""
		        android:textColor="@color/blanco" />
	    </LinearLayout>
	    
        <LinearLayout 
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
            android:orientation="horizontal">
		    <TextView
		        android:id="@+id/tv_descripcion_negocio_buscador_titulo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/titulo_descripcion_ruta"
		        android:textColor="@color/blanco"
		        android:textStyle="bold" />
		    
			    <TextView
		        android:id="@+id/tv_descripcion_negocio_buscador"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="5dp"
		        android:text=""
		        android:textColor="@color/blanco" />
		</LinearLayout>
	</LinearLayout>
    <ImageView
        android:id="@+id/img_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/texto_imagenes"
        android:src="@drawable/ic_buscar" />
    
</RelativeLayout>